# cert-tutor

./: .env.example  .gitignore  README.md  SPEC.md  STUDY_GUIDE.md  cca_question_bank.json  claude_certified_architect_question_bank.json  config.yaml  pyproject.toml  sample_questions.json
docs/: arch-devops.txt  arch-disaster-recovery-planning.txt  arch-enterprise-best-practices.txt  arch-gke-best-practices.txt  arch-hybrid-multicloud-patterns.txt  arch-identity.txt  arch-landing-zones.txt  arch-migration-guide.txt  arch-networking.txt  arch-security-foundations.txt  arch-vpc-design-best-practices.txt  openexamprep-study-guide.txt  prod-bigquery-best-practices.txt  prod-cloud-sql-best-practices.txt  prod-cloud-storage-best-practices.txt  prod-iam-overview.txt  waf-cost-align-spending.txt  waf-cost-culture-awareness.txt  waf-cost-optimization.txt  waf-cost-optimize-continuously.txt  waf-cost-optimize-resources.txt  waf-operational-excellence.txt  waf-opex-automate-manage-change.txt  waf-opex-continuously-improve.txt  waf-opex-manage-incidents.txt  waf-opex-manage-optimize-resources.txt  waf-opex-operational-readiness.txt  waf-perf-elasticity.txt  waf-perf-modular-design.txt  waf-perf-monitor-improve.txt  waf-perf-plan-resources.txt  waf-performance-optimization.txt  waf-rel-define-reliability.txt  waf-rel-graceful-degradation.txt  waf-rel-high-availability.txt  waf-rel-horizontal-scalability.txt  waf-rel-observability.txt  waf-rel-postmortems.txt  waf-rel-set-targets.txt  waf-rel-test-recovery-data-loss.txt  (+11 more)
tests/: test_prompter.py  test_question_pool.py  test_session.py  (+1 more)
(+11 files in other folders)
