[project]
name = "cert-tutor"
version = "0.1.0"
description = "Interactive CLI study tutor for technical certifications using OpenAI + RAG"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=0.4.0",
    "pymupdf>=1.23.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "openai>=2.30.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "prompt-toolkit>=3.0.52",
]
